uploaded onyx dataset

--- a/lab_3_scikit/gmsc-test_jasper.ipynb
+++ b/lab_3_scikit/gmsc-test_jasper.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:55.211038Z",
-     "start_time": "2024-03-06T06:19:55.022177Z"
+     "end_time": "2024-03-07T07:06:29.813365Z",
+     "start_time": "2024-03-07T07:06:29.629666Z"
     }
    },
    "outputs": [],
@@ -30,8 +30,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:55.316230Z",
-     "start_time": "2024-03-06T06:19:55.208189Z"
+     "end_time": "2024-03-07T07:06:29.918218Z",
+     "start_time": "2024-03-07T07:06:29.814850Z"
     }
    },
    "outputs": [],
@@ -49,8 +49,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:55.322861Z",
-     "start_time": "2024-03-06T06:19:55.317085Z"
+     "end_time": "2024-03-07T07:06:29.929050Z",
+     "start_time": "2024-03-07T07:06:29.918568Z"
     }
    },
    "outputs": [
@@ -93,8 +93,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:55.328957Z",
-     "start_time": "2024-03-06T06:19:55.323997Z"
+     "end_time": "2024-03-07T07:06:29.929415Z",
+     "start_time": "2024-03-07T07:06:29.925659Z"
     }
    },
    "outputs": [],
@@ -111,8 +111,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:55.334995Z",
-     "start_time": "2024-03-06T06:19:55.326362Z"
+     "end_time": "2024-03-07T07:06:29.941077Z",
+     "start_time": "2024-03-07T07:06:29.929680Z"
     }
    },
    "outputs": [
@@ -139,8 +139,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:55.362778Z",
-     "start_time": "2024-03-06T06:19:55.335951Z"
+     "end_time": "2024-03-07T07:06:29.980358Z",
+     "start_time": "2024-03-07T07:06:29.938847Z"
     }
    },
    "outputs": [
@@ -167,8 +167,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:55.363752Z",
-     "start_time": "2024-03-06T06:19:55.343453Z"
+     "end_time": "2024-03-07T07:06:29.981103Z",
+     "start_time": "2024-03-07T07:06:29.945660Z"
     }
    },
    "outputs": [],
@@ -186,8 +186,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:55.379400Z",
-     "start_time": "2024-03-06T06:19:55.350543Z"
+     "end_time": "2024-03-07T07:06:29.982533Z",
+     "start_time": "2024-03-07T07:06:29.951271Z"
     }
    },
    "outputs": [],
@@ -206,8 +206,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:55.395949Z",
-     "start_time": "2024-03-06T06:19:55.381603Z"
+     "end_time": "2024-03-07T07:06:29.988153Z",
+     "start_time": "2024-03-07T07:06:29.983367Z"
     }
    },
    "outputs": [
@@ -232,8 +232,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:55.581101Z",
-     "start_time": "2024-03-06T06:19:55.384977Z"
+     "end_time": "2024-03-07T07:06:30.184237Z",
+     "start_time": "2024-03-07T07:06:29.986869Z"
     }
    },
    "outputs": [
@@ -259,8 +259,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:57.149301Z",
-     "start_time": "2024-03-06T06:19:55.582999Z"
+     "end_time": "2024-03-07T07:06:31.733486Z",
+     "start_time": "2024-03-07T07:06:30.185246Z"
     }
    },
    "outputs": [
@@ -293,8 +293,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:57.188396Z",
-     "start_time": "2024-03-06T06:19:57.151179Z"
+     "end_time": "2024-03-07T07:06:31.771109Z",
+     "start_time": "2024-03-07T07:06:31.729767Z"
     }
    },
    "outputs": [],
@@ -311,8 +311,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:57.205384Z",
-     "start_time": "2024-03-06T06:19:57.173090Z"
+     "end_time": "2024-03-07T07:06:31.787953Z",
+     "start_time": "2024-03-07T07:06:31.753434Z"
     }
    },
    "outputs": [
@@ -336,8 +336,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:57.205804Z",
-     "start_time": "2024-03-06T06:19:57.201663Z"
+     "end_time": "2024-03-07T07:06:31.788296Z",
+     "start_time": "2024-03-07T07:06:31.785997Z"
     }
    },
    "outputs": [],
@@ -358,8 +358,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:57.360930Z",
-     "start_time": "2024-03-06T06:19:57.204200Z"
+     "end_time": "2024-03-07T07:06:31.962266Z",
+     "start_time": "2024-03-07T07:06:31.788417Z"
     }
    },
    "outputs": [
@@ -382,8 +382,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:57.536449Z",
-     "start_time": "2024-03-06T06:19:57.359944Z"
+     "end_time": "2024-03-07T07:06:32.106895Z",
+     "start_time": "2024-03-07T07:06:31.958871Z"
     }
    },
    "outputs": [
@@ -412,8 +412,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:57.984397Z",
-     "start_time": "2024-03-06T06:19:57.536019Z"
+     "end_time": "2024-03-07T07:06:32.563639Z",
+     "start_time": "2024-03-07T07:06:32.107060Z"
     }
    },
    "outputs": [
@@ -453,14 +453,14 @@
    "source": [
     "import torch\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "# Convert DataFrame to numpy arrays\n",
     "X_np = train.drop(['ID', 'SeriousDlqin2yrs'], axis=1).values\n",
     "y_np = train['SeriousDlqin2yrs'].values\n",
     "\n",
-    "# Standardize features\n",
-    "scaler = StandardScaler()\n",
+    "# Standardize features to be between 0 and 1\n",
+    "scaler = MinMaxScaler()\n",
     "X_np_scaled = scaler.fit_transform(X_np)\n",
     "\n",
     "X_train_np, X_test_np, y_train_np, y_test_np = train_test_split(X_np_scaled, y_np, test_size=0.2, random_state=42)\n",
@@ -474,8 +474,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:58.690528Z",
-     "start_time": "2024-03-06T06:19:57.984117Z"
+     "end_time": "2024-03-07T07:06:33.200055Z",
+     "start_time": "2024-03-07T07:06:32.563413Z"
     }
    }
   },
@@ -510,8 +510,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:19:58.697274Z",
-     "start_time": "2024-03-06T06:19:58.692491Z"
+     "end_time": "2024-03-07T07:06:33.205399Z",
+     "start_time": "2024-03-07T07:06:33.201821Z"
     }
    }
   },
@@ -523,27 +523,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0 Loss 0.6994510889053345 Val Loss 0.6966297030448914\n",
-      "Epoch 100 Loss 0.42542901635169983 Val Loss 0.4210680425167084\n",
-      "Epoch 200 Loss 0.24923476576805115 Val Loss 0.24586175382137299\n",
-      "Epoch 300 Loss 0.2233302891254425 Val Loss 0.21989674866199493\n",
-      "Epoch 400 Loss 0.2124631702899933 Val Loss 0.20872050523757935\n",
-      "Epoch 500 Loss 0.20432011783123016 Val Loss 0.20040273666381836\n",
-      "Epoch 600 Loss 0.19943036139011383 Val Loss 0.1955007165670395\n",
-      "Epoch 700 Loss 0.19646914303302765 Val Loss 0.19261562824249268\n",
-      "Epoch 800 Loss 0.19461746513843536 Val Loss 0.19084353744983673\n",
-      "Epoch 900 Loss 0.19342532753944397 Val Loss 0.18976673483848572\n",
-      "Epoch 1000 Loss 0.19258849322795868 Val Loss 0.18905985355377197\n",
-      "Epoch 1100 Loss 0.19198502600193024 Val Loss 0.18858285248279572\n",
-      "Epoch 1200 Loss 0.1915563941001892 Val Loss 0.18827089667320251\n",
-      "Epoch 1300 Loss 0.1911981999874115 Val Loss 0.18805494904518127\n",
-      "Epoch 1400 Loss 0.1908915489912033 Val Loss 0.18786190450191498\n",
-      "Epoch 1500 Loss 0.1906590759754181 Val Loss 0.18770655989646912\n",
-      "Epoch 1600 Loss 0.19047321379184723 Val Loss 0.18760176002979279\n",
-      "Epoch 1700 Loss 0.19032634794712067 Val Loss 0.18753288686275482\n",
-      "Epoch 1800 Loss 0.19020682573318481 Val Loss 0.1874733716249466\n",
-      "Epoch 1900 Loss 0.19009366631507874 Val Loss 0.18741865456104279\n",
-      "Accuracy: 0.9346666932106018\n"
+      "Epoch 0 Loss 0.8121463656425476 Val Loss 0.810180127620697\n",
+      "Epoch 100 Loss 0.6040713787078857 Val Loss 0.6016485095024109\n",
+      "Epoch 200 Loss 0.37827178835868835 Val Loss 0.37421008944511414\n",
+      "Epoch 300 Loss 0.256493479013443 Val Loss 0.25226521492004395\n",
+      "Epoch 400 Loss 0.2404889017343521 Val Loss 0.2357477843761444\n",
+      "Epoch 500 Loss 0.2382543832063675 Val Loss 0.23332948982715607\n",
+      "Epoch 600 Loss 0.23654085397720337 Val Loss 0.23161134123802185\n",
+      "Epoch 700 Loss 0.23474657535552979 Val Loss 0.22984391450881958\n",
+      "Epoch 800 Loss 0.23291678726673126 Val Loss 0.22804729640483856\n",
+      "Epoch 900 Loss 0.23111386597156525 Val Loss 0.22628290951251984\n",
+      "Epoch 1000 Loss 0.22929033637046814 Val Loss 0.2245125025510788\n",
+      "Epoch 1100 Loss 0.22747555375099182 Val Loss 0.2227519005537033\n",
+      "Epoch 1200 Loss 0.22558890283107758 Val Loss 0.22093316912651062\n",
+      "Epoch 1300 Loss 0.22354373335838318 Val Loss 0.21895629167556763\n",
+      "Epoch 1400 Loss 0.22153855860233307 Val Loss 0.21701721847057343\n",
+      "Epoch 1500 Loss 0.21932144463062286 Val Loss 0.2148500680923462\n",
+      "Epoch 1600 Loss 0.21684156358242035 Val Loss 0.21240118145942688\n",
+      "Epoch 1700 Loss 0.21411432325839996 Val Loss 0.20969879627227783\n",
+      "Epoch 1800 Loss 0.21124137938022614 Val Loss 0.20684891939163208\n",
+      "Epoch 1900 Loss 0.20840108394622803 Val Loss 0.20402143895626068\n",
+      "Epoch 2000 Loss 0.20580360293388367 Val Loss 0.2014312595129013\n",
+      "Epoch 2100 Loss 0.20353475213050842 Val Loss 0.19921863079071045\n",
+      "Epoch 2200 Loss 0.20150838792324066 Val Loss 0.1972336322069168\n",
+      "Epoch 2300 Loss 0.19988390803337097 Val Loss 0.19565913081169128\n",
+      "Epoch 2400 Loss 0.1985473930835724 Val Loss 0.19440440833568573\n",
+      "Accuracy: 0.9373999834060669\n"
      ]
     }
    ],
@@ -553,7 +558,7 @@
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "# Training loop\n",
-    "for epoch in range(2000):  # number of epochs to train for\n",
+    "for epoch in range(2500):  # number of epochs to train for\n",
     "    model.train()\n",
     "    optimizer.zero_grad()\n",
     "    output = model(X_train)\n",
@@ -584,34 +589,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:20:19.408973Z",
-     "start_time": "2024-03-06T06:19:58.697474Z"
+     "end_time": "2024-03-07T07:06:58.075957Z",
+     "start_time": "2024-03-07T07:06:33.206686Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution: ['2.1346961091', '3.4980615534', '-3.5130797330', '-6.1483387210', '8.4998163441', '4.1123053929', '-6.1005643149', '0.5269929251', '10.3222467032', '-2.4893694263']\n",
-      "Active inputs: 10 out of 10 (100.00%)\n",
-      "\n",
+      "Solution: ['-0.9310586878', '0', '0', '-0.2327530298', '0', '-0.1426827613', '0', '0', '0', '-0.5443541432']\n",
+      "Active inputs: 4 out of 10 (40.00%)\n",
       "\n",
       "Optimal values for each feature:\n",
-      "RevolvingUtilizationOfUnsecuredLines: 2.1346961091\n",
-      "age: 3.4980615534\n",
-      "NumberOfTime30-59DaysPastDueNotWorse: -3.5130797330\n",
-      "DebtRatio: -6.1483387210\n",
-      "MonthlyIncome: 8.4998163441\n",
-      "NumberOfOpenCreditLinesAndLoans: 4.1123053929\n",
-      "NumberOfTimes90DaysLate: -6.1005643149\n",
-      "NumberRealEstateLoansOrLines: 0.5269929251\n",
-      "NumberOfTime60-89DaysPastDueNotWorse: 10.3222467032\n",
-      "NumberOfDependents: -2.4893694263\n"
+      "RevolvingUtilizationOfUnsecuredLines: -0.9310586878\n",
+      "age: 0\n",
+      "NumberOfTime30-59DaysPastDueNotWorse: 0\n",
+      "DebtRatio: -0.2327530298\n",
+      "MonthlyIncome: 0\n",
+      "NumberOfOpenCreditLinesAndLoans: -0.1426827613\n",
+      "NumberOfTimes90DaysLate: 0\n",
+      "NumberRealEstateLoansOrLines: 0\n",
+      "NumberOfTime60-89DaysPastDueNotWorse: 0\n",
+      "NumberOfDependents: -0.5443541432\n"
      ]
     }
    ],
@@ -620,13 +624,11 @@
     "\n",
     "class NeuralNetworkOptimizer:\n",
     "    def __init__(self, input_size, hidden_sizes, weights_and_biases):\n",
-    "        # Initialize the optimizer with the size of the input layer, the sizes of hidden layers (as a list),\n",
-    "        # and the weights and biases for each layer.\n",
-    "        self.input_size = input_size  # Number of neurons in the input layer\n",
-    "        self.hidden_sizes = hidden_sizes  # List containing the size of each hidden layer\n",
-    "        self.weights_and_biases = weights_and_biases  # Nested list of weights and biases for each layer\n",
-    "        self.inputs = [Real(f'x{i}') for i in range(input_size)]  # Define the input variables for the Z3 solver\n",
-    "        self.solver = Optimize()  # Initialize the Z3 optimizer\n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_sizes = hidden_sizes \n",
+    "        self.weights_and_biases = weights_and_biases \n",
+    "        self.inputs = [Real(f'x{i}') for i in range(input_size)] \n",
+    "        self.solver = Optimize()\n",
     "\n",
     "    def calculate_activation(self):\n",
     "        # Calculate the activation of neurons in the first hidden layer based on the input and the layer's weights and biases.\n",
@@ -646,21 +648,17 @@
     "\n",
     "    def check_solution(self):\n",
     "        # Check if there is a solution that maximizes the activations in the first hidden layer and print it.\n",
-    "        if self.solver.check() == sat:  # If the solver finds a solution\n",
-    "            model = self.solver.model()  # Get the model (solution) from the solver\n",
-    "            solution = [model.evaluate(inp).as_decimal(10).rstrip('?') for inp in self.inputs]  # Extract the solution values for the inputs\n",
+    "        if self.solver.check() == sat: \n",
+    "            model = self.solver.model() \n",
+    "            solution = [model.evaluate(inp).as_decimal(10).rstrip('?') for inp in self.inputs]\n",
+    "            \n",
     "            print(\"Solution:\", solution)\n",
-    "            # Count how many of the input neurons are active (non-zero) and print the statistic\n",
     "            active_inputs = sum(1 for value in solution if float(value) != 0)\n",
     "            print(f\"Active inputs: {active_inputs} out of {self.input_size} ({(active_inputs / self.input_size * 100):.2f}%)\")\n",
-    "            # print train.colomn names but with the solution but skip first 2\n",
-    "            # and format it nicely so feature: optimal value\n",
-    "            print(\"\\n\")\n",
-    "            print(\"Optimal values for each feature:\")\n",
+    "            print(\"\\nOptimal values for each feature:\")\n",
     "            for i in range(2, len(train.columns)):\n",
     "                print(f\"{train.columns[i]}: {solution[i-2]}\")\n",
     "        else:\n",
-    "            # If no solution is found that satisfies the optimization condition\n",
     "            print(\"No solution found that maximizes neuron activations in the first layer.\")\n",
     "\n",
     "# Example usage (assuming `input_size`, `hidden_sizes`, `weights_and_biases` are defined)\n",
@@ -671,8 +669,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-06T06:43:23.866830Z",
-     "start_time": "2024-03-06T06:43:23.830344Z"
+     "end_time": "2024-03-07T07:06:58.325977Z",
+     "start_time": "2024-03-07T07:06:58.075171Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2873296125.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;36m  Cell \u001B[0;32mIn[22], line 1\u001B[0;36m\u001B[0m\n\u001B[0;31m    |\u001B[0m\n\u001B[0m    ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "|"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-07T07:06:58.326290Z",
+     "start_time": "2024-03-07T07:06:58.322128Z"
     }
    }
   }
