--- a/Project/onnx-example-main/good_model_onyx.ipynb
+++ b/Project/onnx-example-main/good_model_onyx.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "aa476b3d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T07:24:12.633818Z",
-     "start_time": "2024-03-09T07:24:12.625972Z"
+     "end_time": "2024-03-09T07:27:55.674314Z",
+     "start_time": "2024-03-09T07:27:54.592382Z"
     }
    },
    "outputs": [],
@@ -36,8 +36,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Data preprocessing and feature selection"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f5c68733094bb7d"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# Let's load the dataset\n",
@@ -46,15 +56,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T07:24:13.055524Z",
-     "start_time": "2024-03-09T07:24:12.939207Z"
+     "end_time": "2024-03-09T07:27:55.775477Z",
+     "start_time": "2024-03-09T07:27:55.674909Z"
     }
    },
    "id": "9e08d21e4405f83b"
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -188,6 +198,7 @@
     "# TODO: Correlation does not imply causation. Two variables might be correlated due to a third variable or by coincidence.\n",
     "# TODO: The threshold of 0.5 is arbitrary and might need to be adjusted based on your specific dataset and the model you are using. For some models, even moderately correlated features might pose problems, while for others, even higher correlations might not be as concerning.\n",
     "# TODO: As a baseline model we can also use a model that has built-in mechanisms for feature selection (like L1 regularization for linear models). \n",
+    "# TODO: Not checking missing values, outliers, or other data quality issues. These can also affect the model's performance and should be addressed before or during feature selection.\n",
     "\n",
     "# Assuming data is your DataFrame\n",
     "# Calculate the correlation matrix\n",
@@ -232,8 +243,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T07:24:15.590662Z",
-     "start_time": "2024-03-09T07:24:13.322442Z"
+     "end_time": "2024-03-09T07:27:57.941510Z",
+     "start_time": "2024-03-09T07:27:55.777293Z"
     }
    },
    "id": "63ea9101631c012d"
@@ -256,12 +267,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "8e81b41d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T07:24:15.600132Z",
-     "start_time": "2024-03-09T07:24:15.587958Z"
+     "end_time": "2024-03-09T07:27:57.950153Z",
+     "start_time": "2024-03-09T07:27:57.938227Z"
     }
    },
    "outputs": [],
@@ -271,18 +282,19 @@
     "X = data_reduced.drop(['checked'], axis=1)\n",
     "X = X.astype(np.float32)\n",
     "\n",
+    "# TODO: Instead of a single train-test split, consider using cross-validation to assess model performance more robustly. This approach can help ensure the model's generalizability across different subsets of our data.\n",
     "# Let's split the dataset into train and test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, shuffle=True, stratify=y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T07:25:08.334501Z",
-     "start_time": "2024-03-09T07:25:06.914697Z"
+     "end_time": "2024-03-09T07:27:59.314450Z",
+     "start_time": "2024-03-09T07:27:57.953806Z"
     }
    },
    "outputs": [
@@ -397,6 +409,8 @@
     }
    ],
    "source": [
+    "# TODO: Further explore feature engineering possibilities. Creating new features based on domain knowledge can provide the model with additional insights, potentially improving performance\n",
+    "\n",
     "# Initializing and training the RandomForestClassifier\n",
     "clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "clf.fit(X_train, y_train)\n",
@@ -420,10 +434,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "# List of features to keep\n",
+    "# List of features to keep:\n",
     "features_to_select = [\n",
     "    \"pla_historie_ontwikkeling\",\n",
     "    \"ontheffing_dagen_hist_mean\",\n",
@@ -440,20 +454,30 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T07:26:46.997622Z",
-     "start_time": "2024-03-09T07:26:46.984926Z"
+     "end_time": "2024-03-09T07:27:59.314583Z",
+     "start_time": "2024-03-09T07:27:59.311013Z"
     }
    },
    "id": "61da8605d0592491"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Feature scaling and model training"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9e8911074abf9ebe"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "eaf5a3c6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T07:26:47.781106Z",
-     "start_time": "2024-03-09T07:26:47.771353Z"
+     "end_time": "2024-03-09T07:27:59.319103Z",
+     "start_time": "2024-03-09T07:27:59.313787Z"
     }
    },
    "outputs": [],
@@ -464,12 +488,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T07:26:48.924783Z",
-     "start_time": "2024-03-09T07:26:48.918754Z"
+     "end_time": "2024-03-09T07:27:59.319248Z",
+     "start_time": "2024-03-09T07:27:59.316029Z"
     }
    },
    "outputs": [],
@@ -477,23 +501,27 @@
     "# Create a pipeline object with our selector and classifier\n",
     "# NOTE: You can create custom pipeline objects but they must be registered to onnx or it will not recognise them\n",
     "# Because of this we recommend using the onnx known objects as defined in the documentation\n",
+    "# TODO: The pipeline construction and inclusion of feature scaling via StandardScaler is a good practice, ensuring that your model is not biased by the scale of the features.\n",
     "pipeline_steps = [\n",
     "    ('scaling', StandardScaler()),\n",
     "    ('classification', RandomForestClassifier())\n",
     "]\n",
     "\n",
-    "pipeline = Pipeline(steps=pipeline_steps)"
+    "pipeline = Pipeline(steps=pipeline_steps)\n",
+    "\n",
+    "# Let's train a simple model\n",
+    "pipeline.fit(X_train, y_train)"
    ],
    "id": "d8ae8fe8386fc9aa"
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T07:26:51.104686Z",
-     "start_time": "2024-03-09T07:26:49.683359Z"
+     "end_time": "2024-03-09T07:28:00.716499Z",
+     "start_time": "2024-03-09T07:27:59.319511Z"
     }
    },
    "outputs": [
@@ -501,14 +529,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of the original model:  0.9019375247133254\n"
+      "Accuracy of the original model:  0.9023329379201266\n"
      ]
     }
    ],
    "source": [
-    "# Let's train a simple model\n",
-    "pipeline.fit(X_train, y_train)\n",
-    "\n",
+    "# TODO: Our evaluation focuses on accuracy, which is a good starting point. However, for fraud detection, other metrics like Precision, Recall, F1 Score, or even a custom cost function might be more appropriate due to the typically imbalanced nature of fraud data. This helps ensure you're not only capturing the fraud cases accurately but also minimizing false positives which can be costly or disruptive.\n",
     "# Let's evaluate the model\n",
     "y_pred = pipeline.predict(X_test)\n",
     "original_accuracy = accuracy_score(y_test, y_pred)\n",
@@ -518,11 +544,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T07:27:01.366339Z",
-     "start_time": "2024-03-09T07:26:59.902325Z"
+     "end_time": "2024-03-09T07:28:02.084530Z",
+     "start_time": "2024-03-09T07:28:00.717511Z"
     }
    },
    "outputs": [
@@ -551,12 +577,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "3f68f63d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T07:27:02.435672Z",
-     "start_time": "2024-03-09T07:27:02.349342Z"
+     "end_time": "2024-03-09T07:28:02.156089Z",
+     "start_time": "2024-03-09T07:28:02.081595Z"
     }
    },
    "outputs": [
@@ -570,10 +596,10 @@
    ],
    "source": [
     "# Let's save the model\n",
-    "onnx.save(onnx_model, \"model/gboost.onnx\")\n",
+    "onnx.save(onnx_model, \"model/good_model.onnx\")\n",
     "\n",
     "# Let's load the model\n",
-    "new_session = rt.InferenceSession(\"model/gboost.onnx\")\n",
+    "new_session = rt.InferenceSession(\"model/good_model.onnx\")\n",
     "\n",
     "# Let's predict the target\n",
     "y_pred_onnx2 =  new_session.run(None, {'X': X_test.values.astype(np.float32)})\n",
@@ -584,11 +610,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-09T07:28:02.156262Z",
+     "start_time": "2024-03-09T07:28:02.152764Z"
+    }
    },
    "id": "6429d69ef0396d17"
   }
