--- a/Project/onnx-example-main/good_model_onyx.ipynb
+++ b/Project/onnx-example-main/good_model_onyx.ipynb
@@ -195,10 +195,10 @@
     }
    ],
    "source": [
-    "# TODO: Correlation does not imply causation. Two variables might be correlated due to a third variable or by coincidence.\n",
+    "# TODO: Jasper: Correlation does not imply causation. Two variables might be correlated due to a third variable or by coincidence.\n",
     "# TODO: The threshold of 0.5 is arbitrary and might need to be adjusted based on your specific dataset and the model you are using. For some models, even moderately correlated features might pose problems, while for others, even higher correlations might not be as concerning.\n",
     "# TODO: As a baseline model we can also use a model that has built-in mechanisms for feature selection (like L1 regularization for linear models). \n",
-    "# TODO: Not checking missing values, outliers, or other data quality issues. These can also affect the model's performance and should be addressed before or during feature selection.\n",
+    "# TODO: Saga: Not checking missing values, outliers, or other data quality issues, imbalanced dataset. These can also affect the model's performance and should be addressed before or during feature selection.\n",
     "\n",
     "# Assuming data is your DataFrame\n",
     "# Calculate the correlation matrix\n",
