--- a/Project/onnx-example-main/good_model_onyx.ipynb
+++ b/Project/onnx-example-main/good_model_onyx.ipynb
@@ -195,9 +195,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 56\u001B[0m\n\u001B[1;32m     52\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mOriginal number of features: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mdata\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m1\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m, Reduced number of features: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mdata_reduced\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m1\u001B[39m]\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     53\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m data_reduced\n\u001B[0;32m---> 56\u001B[0m data_reduced \u001B[38;5;241m=\u001B[39m main(data)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'data' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "# TODO: We want to remove this and remove un-FAIR features first and then do dimensionality reduction.\n",
+    "\n",
+    "\n",
     "def calculate_correlation_matrix(data):\n",
     "    return data.corr()\n",
     "\n",
@@ -257,9 +272,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2024-03-13T09:45:08.382882Z"
+     "end_time": "2024-03-18T10:08:19.972067Z",
+     "start_time": "2024-03-18T10:08:19.724209Z"
     }
    },
    "id": "6f80c92f08df57db"
@@ -274,7 +289,9 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "start_time": "2024-03-18T10:08:19.970585Z"
+    }
    },
    "id": "b46ed9aaadbf46b7"
   },
