--- a/Project/onnx-example-main/bad_model_onyx.ipynb
+++ b/Project/onnx-example-main/bad_model_onyx.ipynb
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "d8ae8fe8386fc9aa",
    "metadata": {
     "collapsed": false,
@@ -567,22 +567,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'memory': None, 'steps': [('scaler', RobustScaler()), ('regressor', MLPClassifier(activation='logistic', batch_size=32,\n",
-      "              hidden_layer_sizes=(100, 200), max_iter=2000, shuffle=False,\n",
-      "              solver='sgd'))], 'verbose': False, 'scaler': RobustScaler(), 'regressor': MLPClassifier(activation='logistic', batch_size=32,\n",
-      "              hidden_layer_sizes=(100, 200), max_iter=2000, shuffle=False,\n",
-      "              solver='sgd'), 'scaler__copy': True, 'scaler__quantile_range': (25.0, 75.0), 'scaler__unit_variance': False, 'scaler__with_centering': True, 'scaler__with_scaling': True, 'regressor__activation': 'logistic', 'regressor__alpha': 0.0001, 'regressor__batch_size': 32, 'regressor__beta_1': 0.9, 'regressor__beta_2': 0.999, 'regressor__early_stopping': False, 'regressor__epsilon': 1e-08, 'regressor__hidden_layer_sizes': (100, 200), 'regressor__learning_rate': 'constant', 'regressor__learning_rate_init': 0.001, 'regressor__max_fun': 15000, 'regressor__max_iter': 2000, 'regressor__momentum': 0.9, 'regressor__n_iter_no_change': 10, 'regressor__nesterovs_momentum': True, 'regressor__power_t': 0.5, 'regressor__random_state': None, 'regressor__shuffle': False, 'regressor__solver': 'sgd', 'regressor__tol': 0.0001, 'regressor__validation_fraction': 0.1, 'regressor__verbose': False, 'regressor__warm_start': False}\n",
-      "{'memory': None, 'steps': [('scaler', RobustScaler()), ('regressor', MLPClassifier(batch_size=32, hidden_layer_sizes=(100, 100), max_iter=2000,\n",
-      "              shuffle=False, solver='sgd'))], 'verbose': False, 'scaler': RobustScaler(), 'regressor': MLPClassifier(batch_size=32, hidden_layer_sizes=(100, 100), max_iter=2000,\n",
-      "              shuffle=False, solver='sgd'), 'scaler__copy': True, 'scaler__quantile_range': (25.0, 75.0), 'scaler__unit_variance': False, 'scaler__with_centering': True, 'scaler__with_scaling': True, 'regressor__activation': 'relu', 'regressor__alpha': 0.0001, 'regressor__batch_size': 32, 'regressor__beta_1': 0.9, 'regressor__beta_2': 0.999, 'regressor__early_stopping': False, 'regressor__epsilon': 1e-08, 'regressor__hidden_layer_sizes': (100, 100), 'regressor__learning_rate': 'constant', 'regressor__learning_rate_init': 0.001, 'regressor__max_fun': 15000, 'regressor__max_iter': 2000, 'regressor__momentum': 0.9, 'regressor__n_iter_no_change': 10, 'regressor__nesterovs_momentum': True, 'regressor__power_t': 0.5, 'regressor__random_state': None, 'regressor__shuffle': False, 'regressor__solver': 'sgd', 'regressor__tol': 0.0001, 'regressor__validation_fraction': 0.1, 'regressor__verbose': False, 'regressor__warm_start': False}\n",
-      "{'memory': None, 'steps': [('scaler', RobustScaler()), ('regressor', MLPClassifier(batch_size=128, hidden_layer_sizes=(100, 100),\n",
-      "              learning_rate='adaptive', max_iter=1000))], 'verbose': False, 'scaler': RobustScaler(), 'regressor': MLPClassifier(batch_size=128, hidden_layer_sizes=(100, 100),\n",
-      "              learning_rate='adaptive', max_iter=1000), 'scaler__copy': True, 'scaler__quantile_range': (25.0, 75.0), 'scaler__unit_variance': False, 'scaler__with_centering': True, 'scaler__with_scaling': True, 'regressor__activation': 'relu', 'regressor__alpha': 0.0001, 'regressor__batch_size': 128, 'regressor__beta_1': 0.9, 'regressor__beta_2': 0.999, 'regressor__early_stopping': False, 'regressor__epsilon': 1e-08, 'regressor__hidden_layer_sizes': (100, 100), 'regressor__learning_rate': 'adaptive', 'regressor__learning_rate_init': 0.001, 'regressor__max_fun': 15000, 'regressor__max_iter': 1000, 'regressor__momentum': 0.9, 'regressor__n_iter_no_change': 10, 'regressor__nesterovs_momentum': True, 'regressor__power_t': 0.5, 'regressor__random_state': None, 'regressor__shuffle': True, 'regressor__solver': 'adam', 'regressor__tol': 0.0001, 'regressor__validation_fraction': 0.1, 'regressor__verbose': False, 'regressor__warm_start': False}\n",
+      "{'memory': None, 'steps': [('scaler', RobustScaler()), ('regressor', XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+      "              colsample_bylevel=None, colsample_bynode=None,\n",
+      "              colsample_bytree=0.9, device=None, early_stopping_rounds=None,\n",
+      "              enable_categorical=False, eval_metric='logloss',\n",
+      "              feature_types=None, gamma=None, grow_policy=None,\n",
+      "              importance_type=None, interaction_constraints=None,\n",
+      "              learning_rate=0.3, max_bin=None, max_cat_threshold=None,\n",
+      "              max_cat_to_onehot=None, max_delta_step=None, max_depth=5,\n",
+      "              max_leaves=None, min_child_weight=None, missing=nan,\n",
+      "              monotone_constraints=None, multi_strategy=None, n_estimators=200,\n",
+      "              n_jobs=None, num_parallel_tree=None, random_state=None, ...))], 'verbose': False, 'scaler': RobustScaler(), 'regressor': XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+      "              colsample_bylevel=None, colsample_bynode=None,\n",
+      "              colsample_bytree=0.9, device=None, early_stopping_rounds=None,\n",
+      "              enable_categorical=False, eval_metric='logloss',\n",
+      "              feature_types=None, gamma=None, grow_policy=None,\n",
+      "              importance_type=None, interaction_constraints=None,\n",
+      "              learning_rate=0.3, max_bin=None, max_cat_threshold=None,\n",
+      "              max_cat_to_onehot=None, max_delta_step=None, max_depth=5,\n",
+      "              max_leaves=None, min_child_weight=None, missing=nan,\n",
+      "              monotone_constraints=None, multi_strategy=None, n_estimators=200,\n",
+      "              n_jobs=None, num_parallel_tree=None, random_state=None, ...), 'scaler__copy': True, 'scaler__quantile_range': (25.0, 75.0), 'scaler__unit_variance': False, 'scaler__with_centering': True, 'scaler__with_scaling': True, 'regressor__objective': 'binary:logistic', 'regressor__base_score': None, 'regressor__booster': None, 'regressor__callbacks': None, 'regressor__colsample_bylevel': None, 'regressor__colsample_bynode': None, 'regressor__colsample_bytree': 0.9, 'regressor__device': None, 'regressor__early_stopping_rounds': None, 'regressor__enable_categorical': False, 'regressor__eval_metric': 'logloss', 'regressor__feature_types': None, 'regressor__gamma': None, 'regressor__grow_policy': None, 'regressor__importance_type': None, 'regressor__interaction_constraints': None, 'regressor__learning_rate': 0.3, 'regressor__max_bin': None, 'regressor__max_cat_threshold': None, 'regressor__max_cat_to_onehot': None, 'regressor__max_delta_step': None, 'regressor__max_depth': 5, 'regressor__max_leaves': None, 'regressor__min_child_weight': None, 'regressor__missing': nan, 'regressor__monotone_constraints': None, 'regressor__multi_strategy': None, 'regressor__n_estimators': 200, 'regressor__n_jobs': None, 'regressor__num_parallel_tree': None, 'regressor__random_state': None, 'regressor__reg_alpha': None, 'regressor__reg_lambda': None, 'regressor__sampling_method': None, 'regressor__scale_pos_weight': 8.996047430830039, 'regressor__subsample': 0.8, 'regressor__tree_method': None, 'regressor__validate_parameters': None, 'regressor__verbosity': None, 'regressor__use_label_encoder': True}\n",
+      "{'memory': None, 'steps': [('scaler', RobustScaler()), ('regressor', XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+      "              colsample_bylevel=None, colsample_bynode=None,\n",
+      "              colsample_bytree=0.8, device=None, early_stopping_rounds=None,\n",
+      "              enable_categorical=False, eval_metric='aucpr', feature_types=None,\n",
+      "              gamma=None, grow_policy=None, importance_type=None,\n",
+      "              interaction_constraints=None, learning_rate=0.3, max_bin=None,\n",
+      "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
+      "              max_delta_step=None, max_depth=5, max_leaves=None,\n",
+      "              min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+      "              multi_strategy=None, n_estimators=200, n_jobs=None,\n",
+      "              num_parallel_tree=None, random_state=None, ...))], 'verbose': False, 'scaler': RobustScaler(), 'regressor': XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+      "              colsample_bylevel=None, colsample_bynode=None,\n",
+      "              colsample_bytree=0.8, device=None, early_stopping_rounds=None,\n",
+      "              enable_categorical=False, eval_metric='aucpr', feature_types=None,\n",
+      "              gamma=None, grow_policy=None, importance_type=None,\n",
+      "              interaction_constraints=None, learning_rate=0.3, max_bin=None,\n",
+      "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
+      "              max_delta_step=None, max_depth=5, max_leaves=None,\n",
+      "              min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+      "              multi_strategy=None, n_estimators=200, n_jobs=None,\n",
+      "              num_parallel_tree=None, random_state=None, ...), 'scaler__copy': True, 'scaler__quantile_range': (25.0, 75.0), 'scaler__unit_variance': False, 'scaler__with_centering': True, 'scaler__with_scaling': True, 'regressor__objective': 'binary:logistic', 'regressor__base_score': None, 'regressor__booster': None, 'regressor__callbacks': None, 'regressor__colsample_bylevel': None, 'regressor__colsample_bynode': None, 'regressor__colsample_bytree': 0.8, 'regressor__device': None, 'regressor__early_stopping_rounds': None, 'regressor__enable_categorical': False, 'regressor__eval_metric': 'aucpr', 'regressor__feature_types': None, 'regressor__gamma': None, 'regressor__grow_policy': None, 'regressor__importance_type': None, 'regressor__interaction_constraints': None, 'regressor__learning_rate': 0.3, 'regressor__max_bin': None, 'regressor__max_cat_threshold': None, 'regressor__max_cat_to_onehot': None, 'regressor__max_delta_step': None, 'regressor__max_depth': 5, 'regressor__max_leaves': None, 'regressor__min_child_weight': None, 'regressor__missing': nan, 'regressor__monotone_constraints': None, 'regressor__multi_strategy': None, 'regressor__n_estimators': 200, 'regressor__n_jobs': None, 'regressor__num_parallel_tree': None, 'regressor__random_state': None, 'regressor__reg_alpha': None, 'regressor__reg_lambda': None, 'regressor__sampling_method': None, 'regressor__scale_pos_weight': 8.996047430830039, 'regressor__subsample': 0.8, 'regressor__tree_method': None, 'regressor__validate_parameters': None, 'regressor__verbosity': None, 'regressor__use_label_encoder': True}\n",
+      "{'memory': None, 'steps': [('scaler', RobustScaler()), ('regressor', XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+      "              colsample_bylevel=None, colsample_bynode=None, colsample_bytree=1,\n",
+      "              device=None, early_stopping_rounds=None, enable_categorical=False,\n",
+      "              eval_metric='logloss', feature_types=None, gamma=None,\n",
+      "              grow_policy=None, importance_type=None,\n",
+      "              interaction_constraints=None, learning_rate=0.1, max_bin=None,\n",
+      "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
+      "              max_delta_step=None, max_depth=15, max_leaves=None,\n",
+      "              min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+      "              multi_strategy=None, n_estimators=300, n_jobs=None,\n",
+      "              num_parallel_tree=None, random_state=None, ...))], 'verbose': False, 'scaler': RobustScaler(), 'regressor': XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+      "              colsample_bylevel=None, colsample_bynode=None, colsample_bytree=1,\n",
+      "              device=None, early_stopping_rounds=None, enable_categorical=False,\n",
+      "              eval_metric='logloss', feature_types=None, gamma=None,\n",
+      "              grow_policy=None, importance_type=None,\n",
+      "              interaction_constraints=None, learning_rate=0.1, max_bin=None,\n",
+      "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
+      "              max_delta_step=None, max_depth=15, max_leaves=None,\n",
+      "              min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+      "              multi_strategy=None, n_estimators=300, n_jobs=None,\n",
+      "              num_parallel_tree=None, random_state=None, ...), 'scaler__copy': True, 'scaler__quantile_range': (25.0, 75.0), 'scaler__unit_variance': False, 'scaler__with_centering': True, 'scaler__with_scaling': True, 'regressor__objective': 'binary:logistic', 'regressor__base_score': None, 'regressor__booster': None, 'regressor__callbacks': None, 'regressor__colsample_bylevel': None, 'regressor__colsample_bynode': None, 'regressor__colsample_bytree': 1, 'regressor__device': None, 'regressor__early_stopping_rounds': None, 'regressor__enable_categorical': False, 'regressor__eval_metric': 'logloss', 'regressor__feature_types': None, 'regressor__gamma': None, 'regressor__grow_policy': None, 'regressor__importance_type': None, 'regressor__interaction_constraints': None, 'regressor__learning_rate': 0.1, 'regressor__max_bin': None, 'regressor__max_cat_threshold': None, 'regressor__max_cat_to_onehot': None, 'regressor__max_delta_step': None, 'regressor__max_depth': 15, 'regressor__max_leaves': None, 'regressor__min_child_weight': None, 'regressor__missing': nan, 'regressor__monotone_constraints': None, 'regressor__multi_strategy': None, 'regressor__n_estimators': 300, 'regressor__n_jobs': None, 'regressor__num_parallel_tree': None, 'regressor__random_state': None, 'regressor__reg_alpha': None, 'regressor__reg_lambda': None, 'regressor__sampling_method': None, 'regressor__scale_pos_weight': 8.996047430830039, 'regressor__subsample': 0.9, 'regressor__tree_method': None, 'regressor__validate_parameters': None, 'regressor__verbosity': None, 'regressor__use_label_encoder': False}\n",
       "Normal\t\t\tUnder\t\t\tOver\n",
-      "Accuracy: 0.9261\tAccuracy: 0.8193\tAccuracy: 0.9130\n",
-      "Precision: 0.6460\tPrecision: 0.3381\tPrecision: 0.5679\n",
-      "Recall: 0.5771\t\tRecall: 0.8419\t\tRecall: 0.5455\n",
-      "F1 Score: 0.6096\tF1 Score: 0.4824\tF1 Score: 0.5565\n"
+      "Accuracy: 0.9494\tAccuracy: 0.8312\tAccuracy: 0.9478\n",
+      "Precision: 0.7803\tPrecision: 0.3717\tPrecision: 0.8168\n",
+      "Recall: 0.6877\t\tRecall: 0.9960\t\tRecall: 0.6166\n",
+      "F1 Score: 0.7311\tF1 Score: 0.5414\tF1 Score: 0.7027\n"
      ]
     }
    ],
@@ -601,7 +653,7 @@
     "\n",
     "hyperparameter_grid_xgboost = {\n",
     "    'regressor__n_estimators': [100, 200, 300],\n",
-    "    'regressor__learning_rate': [0.01, 0.1, 0.2],\n",
+    "    'regressor__learning_rate': [0.01, 0.05, 0.1, 0.2, 0.3],\n",
     "    'regressor__max_depth': [5, 10, 15],\n",
     "    'regressor__subsample': [0.8, 0.9, 1],\n",
     "    'regressor__colsample_bytree': [0.8, 0.9, 1],\n",
@@ -621,7 +673,7 @@
     "}\n",
     "\n",
     "pipeline = RandomizedSearchCV(estimator=pipeline, \n",
-    "                              param_distributions=hyperparameter_grid_mlp,\n",
+    "                              param_distributions=hyperparameter_grid_xgboost,\n",
     "                              cv=5, n_iter=10,\n",
     "                              random_state=0,\n",
     "                              scoring='neg_root_mean_squared_error',\n",
@@ -639,6 +691,7 @@
     "recall1 = recall_score(y_test, y_pred1)\n",
     "f11 = f1_score(y_test, y_pred1)\n",
     "print(pipeline.best_estimator_.get_params())\n",
+    "\n",
     "# -------------------------\n",
     "\n",
     "pipeline.fit(X_train_under, y_train_under)\n",
@@ -648,6 +701,7 @@
     "recall2 = recall_score(y_test, y_pred2)\n",
     "f12 = f1_score(y_test, y_pred2)\n",
     "print(pipeline.best_estimator_.get_params())\n",
+    "\n",
     "# -------------------------\n",
     "\n",
     "pipeline.fit(X_train_smote, y_train_smote)\n",
@@ -657,6 +711,7 @@
     "recall3 = recall_score(y_test, y_pred3)\n",
     "f13 = f1_score(y_test, y_pred3)\n",
     "print(pipeline.best_estimator_.get_params())\n",
+    "\n",
     "# -------------------------\n",
     "\n",
     "print('Normal\\t\\t\\tUnder\\t\\t\\tOver')\n",
